data/forge_javadoc/1.7.10/processed/net_minecraft_scoreboard_ScoreboardSaveData.md
# ScoreboardSaveData

**Inheritance:** java.lang.Object → net.minecraft.world.WorldSavedData → net.minecraft.scoreboard.ScoreboardSaveData

## Class signature

```java
public class ScoreboardSaveData extends WorldSavedData
```

## Methods

- `protected NBTTagList func_96496_a()`
- `protected void func_96497_d(NBTTagCompound p_96497_1_)`
- `protected void func_96498_a(NBTTagList p_96498_1_)`
- `void func_96499_a(Scoreboard p_96499_1_)`
- `protected void func_96500_c(NBTTagList p_96500_1_)`
- `protected void func_96501_b(NBTTagList p_96501_1_)`
- `protected void func_96502_a(ScorePlayerTeam p_96502_1_, NBTTagList p_96502_2_)`
- `protected NBTTagList func_96503_e()`
- `protected void func_96504_c(NBTTagCompound p_96504_1_)`
- `protected NBTTagList func_96505_b()`
- `void readFromNBT(NBTTagCompound p_76184_1_)`
- `void writeToNBT(NBTTagCompound p_76187_1_)`

## Fields

- `ScoreboardSaveData`
- `ScoreboardSaveData`