data/forge_javadoc/1.8.9/processed/net_minecraft_scoreboard_ScoreboardSaveData.md
# ScoreboardSaveData

**Inheritance:** java.lang.Object → net.minecraft.world.WorldSavedData → net.minecraft.scoreboard.ScoreboardSaveData

## Class signature

```java
public class ScoreboardSaveData extends WorldSavedData
```

## Methods

- `protected NBTTagList func_96496_a()`
- `protected void func_96497_d(NBTTagCompound p_96497_1_)`
- `protected void func_96502_a(ScorePlayerTeam p_96502_1_, NBTTagList p_96502_2_)`
- `protected NBTTagList objectivesToNbt()`
- `protected void readDisplayConfig(NBTTagCompound p_96504_1_)`
- `void readFromNBT(NBTTagCompound nbt)` — reads in data from the NBTTagCompound into this MapDataBase
- `protected void readObjectives(NBTTagList nbt)`
- `protected void readScores(NBTTagList nbt)`
- `protected void readTeams(NBTTagList p_96498_1_)`
- `protected NBTTagList scoresToNbt()`
- `void setScoreboard(Scoreboard scoreboardIn)`
- `void writeToNBT(NBTTagCompound nbt)` — write data to NBTTagCompound from this MapDataBase, similar to Entities and TileEntities

## Fields

- `ScoreboardSaveData`
- `ScoreboardSaveData`